[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/characters_overlay/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/chatConnection.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/gift/gift_node.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters_overlay/users.gd" type="Script" id=4]
[ext_resource path="res://visuals/tileset/tiles_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://visuals/objects/cactus.png" type="Texture" id=6]
[ext_resource path="res://visuals/objects/plant.png" type="Texture" id=7]
[ext_resource path="res://visuals/objects/bridgeLogs.png" type="Texture" id=8]
[ext_resource path="res://visuals/objects/fence.png" type="Texture" id=9]
[ext_resource path="res://scenes/characters_overlay/spawner.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 10 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 157.5, 11.5 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 70, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 70, 70, 0, 70, 0, 70, 70, 0 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 44.7133, 69.8232, 44.489, 69.8232, 69.8364, 0.0617676, 69.9485 )

[sub_resource type="TileSet" id=7]
0/name = "tiles_spritesheet.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 504, 576, 70, 70 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 8 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tiles_spritesheet.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 504, 504, 70, 70 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 10 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tiles_spritesheet.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 504, 648, 70, 70 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 12 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 13 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tiles_spritesheet.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 576, 144, 70, 70 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 14 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 15 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tiles_spritesheet.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 576, 0, 70, 70 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 16 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 17 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tiles_spritesheet.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 576, 864, 70, 70 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 18 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tiles_spritesheet.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 576, 72, 70, 70 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tiles_spritesheet.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 504, 864, 70, 70 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tiles_spritesheet.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 288, 720, 70, 70 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 19 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tiles_spritesheet.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 432, 648, 70, 70 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tiles_spritesheet.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 432, 576, 70, 70 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "tiles_spritesheet.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 504, 216, 70, 70 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "tiles_spritesheet.png 12"
12/texture = ExtResource( 5 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 648, 144, 70, 70 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Gift" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Users" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChatConnection" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -207.0
margin_right = 228.0
margin_bottom = 207.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 960, 1070 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -960, -464 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 960, -464 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisualsBackground" type="Node2D" parent="."]

[node name="Cactus" type="Sprite" parent="VisualsBackground"]
position = Vector2( 56, 921 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="Plant" type="Sprite" parent="VisualsBackground"]
position = Vector2( 384, 990 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
flip_h = true

[node name="Plant6" type="Sprite" parent="VisualsBackground"]
position = Vector2( 390, 995 )
scale = Vector2( 0.514286, 0.5 )
texture = ExtResource( 7 )
flip_h = true

[node name="Plant3" type="Sprite" parent="VisualsBackground"]
position = Vector2( 957, 989 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
flip_h = true

[node name="Plant4" type="Sprite" parent="VisualsBackground"]
position = Vector2( 942, 993.5 )
scale = Vector2( 0.514285, 0.528571 )
texture = ExtResource( 7 )
flip_h = true

[node name="Plant5" type="Sprite" parent="VisualsBackground"]
position = Vector2( 966.5, 995 )
scale = Vector2( 0.557142, 0.457143 )
texture = ExtResource( 7 )

[node name="Plant2" type="Sprite" parent="VisualsBackground"]
position = Vector2( 226, 992 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="Plant7" type="Sprite" parent="VisualsBackground"]
position = Vector2( 1458.5, 993 )
scale = Vector2( 0.557142, 0.457143 )
texture = ExtResource( 7 )

[node name="Plant8" type="Sprite" parent="VisualsBackground"]
position = Vector2( 1464.5, 996.5 )
scale = Vector2( 0.500001, 0.500001 )
texture = ExtResource( 7 )
flip_h = true

[node name="Obstacles" type="Node2D" parent="."]

[node name="Bridge" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1207, 986 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Bridge"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 20 )

[node name="Fence" type="Sprite" parent="Obstacles/Bridge"]
position = Vector2( 1, -16 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( -0.221909, 8.845, 840.403, 61.287 )

[node name="BridgeLogs" type="Sprite" parent="Obstacles/Bridge"]
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( -0.243553, 44.6967, 317.877, 24.083 )
region_filter_clip = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 7 )
cell_size = Vector2( 70, 70 )
cell_custom_transform = Transform2D( 70, 0, 0, 70, 0, 0 )
format = 1
tile_data = PoolIntArray( 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507378, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1507381, 0, 0, 1507382, 0, 0, 1638399, 0, 0, 1572911, 5, 0, 1572918, 5, 0, 1572919, 0, 0, 1703935, 0, 0, 1638447, 5, 0, 1638454, 5, 0, 1638455, 0, 0, 1769471, 0, 0, 1703982, 2, 0, 1703983, 5, 0, 1703984, 5, 0, 1703985, 5, 0, 1703986, 5, 0, 1703987, 5, 0, 1703988, 5, 0, 1703989, 5, 0, 1703990, 5, 0, 1703991, 0, 0, 1835007, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769474, 4, 0, 1769519, 5, 0, 1769520, 5, 0, 1769521, 5, 0, 1769522, 5, 0, 1769523, 5, 0, 1769524, 5, 0, 1769525, 5, 0, 1769526, 5, 0, 1769527, 0, 0, 1900543, 5, 0, 1835008, 5, 0, 1835009, 5, 0, 1835010, 7, 0, 1835011, 0, 0, 1835012, 0, 0, 1835013, 4, 0, 1835037, 3, 0, 1835047, 4, 0, 1835055, 0, 0, 1835056, 5, 0, 1835057, 5, 0, 1835058, 5, 0, 1835059, 5, 0, 1835060, 5, 0, 1835061, 5, 0, 1835062, 5, 0, 1835063, 0, 0, 1966079, 5, 0, 1900544, 5, 0, 1900545, 5, 0, 1900546, 5, 0, 1900547, 5, 0, 1900548, 5, 0, 1900549, 7, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0, 1900555, 0, 0, 1900556, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 0, 0, 1900561, 0, 0, 1900562, 0, 0, 1900563, 0, 0, 1900564, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 6, 0, 1900574, 10, 0, 1900575, 10, 0, 1900576, 10, 0, 1900577, 10, 0, 1900578, 10, 0, 1900579, 10, 0, 1900580, 10, 0, 1900581, 10, 0, 1900582, 10, 0, 1900583, 7, 0, 1900584, 0, 0, 1900585, 0, 0, 1900586, 0, 0, 1900587, 0, 0, 1900588, 0, 0, 1900589, 0, 0, 1900590, 0, 0, 1900591, 0, 0, 1900592, 0, 0, 1900593, 0, 0, 1900594, 0, 0, 1900595, 0, 0, 1900596, 0, 0, 1900597, 0, 0, 1900598, 0, 0, 1900599, 0, 0, 2031615, 5, 0, 1966080, 5, 0, 1966081, 5, 0, 1966082, 5, 0, 1966083, 5, 0, 1966084, 5, 0, 1966085, 5, 0, 1966086, 5, 0, 1966087, 5, 0, 1966088, 5, 0, 1966089, 5, 0, 1966090, 5, 0, 1966091, 5, 0, 1966092, 5, 0, 1966093, 5, 0, 1966094, 5, 0, 1966095, 5, 0, 1966096, 5, 0, 1966097, 5, 0, 1966098, 5, 0, 1966099, 5, 0, 1966100, 5, 0, 1966101, 5, 0, 1966102, 5, 0, 1966103, 5, 0, 1966104, 5, 0, 1966105, 5, 0, 1966106, 5, 0, 1966107, 5, 0, 1966108, 5, 0, 1966109, 5, 0, 1966110, 11, 0, 1966111, 11, 0, 1966112, 11, 0, 1966113, 11, 0, 1966114, 11, 0, 1966115, 11, 0, 1966116, 11, 0, 1966117, 11, 0, 1966118, 11, 0, 1966119, 5, 0, 1966120, 5, 0, 1966121, 5, 0, 1966122, 5, 0, 1966123, 5, 0, 1966124, 5, 0, 1966125, 5, 0, 1966126, 5, 0, 1966127, 5, 0, 1966128, 5, 0, 1966129, 5, 0, 1966130, 5, 0, 1966131, 5, 0, 1966132, 5, 0, 1966133, 5, 0, 1966134, 5, 0, 1966135, 5, 0, 2097151, 5, 0, 2031616, 5, 0, 2031617, 5, 0, 2031618, 5, 0, 2031619, 5, 0, 2031620, 5, 0, 2031621, 5, 0, 2031622, 5, 0, 2031623, 5, 0, 2031624, 5, 0, 2031625, 5, 0, 2031626, 5, 0, 2031627, 5, 0, 2031628, 5, 0, 2031629, 5, 0, 2031630, 5, 0, 2031631, 5, 0, 2031632, 5, 0, 2031633, 5, 0, 2031634, 5, 0, 2031635, 5, 0, 2031636, 5, 0, 2031637, 5, 0, 2031638, 5, 0, 2031639, 5, 0, 2031640, 5, 0, 2031641, 5, 0, 2031642, 5, 0, 2031643, 5, 0, 2031644, 5, 0, 2031645, 5, 0, 2031646, 11, 0, 2031647, 11, 0, 2031648, 11, 0, 2031649, 11, 0, 2031650, 11, 0, 2031651, 11, 0, 2031652, 11, 0, 2031653, 11, 0, 2031654, 11, 0, 2031655, 5, 0, 2031656, 5, 0, 2031657, 5, 0, 2031658, 5, 0, 2031659, 5, 0, 2031660, 5, 0, 2031661, 5, 0, 2031662, 5, 0, 2031663, 5, 0, 2031664, 5, 0, 2031665, 5, 0, 2031666, 5, 0, 2031667, 5, 0, 2031668, 5, 0, 2031669, 5, 0, 2031670, 5, 0, 2031671, 5, 0 )

[node name="Characters" type="Node2D" parent="."]

[node name="VisualsForeground" type="Node2D" parent="."]

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Spawner"]
one_shot = true

[connection signal="chat_message" from="Gift" to="." method="_on_Gift_chat_message"]
[connection signal="user_join" from="Gift" to="." method="_on_Gift_user_join"]
[connection signal="user_part" from="Gift" to="." method="_on_Gift_user_part"]
[connection signal="whisper_message" from="Gift" to="." method="_on_Gift_whisper_message"]
[connection signal="connect_pressed" from="CanvasLayer/ChatConnection" to="." method="_on_ChatConnection_connect_pressed"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
